--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -4,6 +4,8 @@
 
 <h1 class="heading">Courses</h1>
 
+<%= link_to "New course", new_course_path, class: "newButton" %>
+
 <div id="courses">
   
   <!-- This is the card grid view, sorted by subject -->
@@ -51,4 +53,4 @@
   <!--</table>-->
 </div>
 
-<%= link_to "New course", new_course_path %>
+
