--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Welcome to Cleo, The Smart Course Scheduler!</h1>
+    <h1 class="heading">Welcome to Cleo, The Smart Course Scheduler!</h1>
     <div class="links">
         <p> <%= link_to "Courses", courses_path %> </p>
         <p> <%= link_to "Degree Plans", degree_plans_path %> </p>
