--- a/app/views/user_plan_courses/index.html.erb
+++ b/app/views/user_plan_courses/index.html.erb
@@ -6,6 +6,8 @@
 
 <h1 class="heading">User plan courses</h1>
 
+<%= link_to "New user plan course", new_user_plan_course_path, class: "newButton" %>
+
 <div id="user_plan_courses">
   <div class="row row-cols-1 row-cols-md-3">
     <% @user_plan_courses.each do |upc| %>
@@ -25,4 +27,3 @@
   </div>
 </div>
 
-<%= link_to "New user plan course", new_user_plan_course_path %>
