--- a/app/views/degree_plans/edit.html.erb
+++ b/app/views/degree_plans/edit.html.erb
@@ -9,6 +9,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this degree plan", @degree_plan %> |
-  <%= link_to "Back to degree plans", degree_plans_path %>
+  <%= link_to "Show this degree plan", @degree_plan, class: "showButton" %> |
+  <%= link_to "Back to degree plans", degree_plans_path, class: "showButton" %>
 </div>
