--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -7,6 +7,6 @@
 <br>
 
 <div>
-  <%= link_to "Show this subject", @subject %> |
-  <%= link_to "Back to subjects", subjects_path %>
+  <%= link_to "Show this subject", @subject, class: "showButton" %> |
+  <%= link_to "Back to subjects", subjects_path, class: "showButton" %>
 </div>
