--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -15,6 +15,7 @@
             <h5 class="card-title">
               <%= link_to subject.code, courses_by_subject_path(subject.code), class: "stretched-link" %>
             </h5>
+            <h6 class="card-subtitle mb-2 text-muted"><%= subject.name %></h6>
           </div>
         </div>
       </div>
