--- a/app/views/user_plan_courses/user_new.html.erb
+++ b/app/views/user_plan_courses/user_new.html.erb
@@ -2,6 +2,7 @@
 
 <h1>New user plan course</h1>
 
+<div class="d-flex justify-content-center mb-3">
 <%= form_with(model: @user_plan_course) do |form| %>
   <% if @user_plan_course.errors.any? %>
     <div style="color: red">
@@ -26,6 +27,18 @@
   </div>
 
   <div>
+    <%= form.label :semester, style: "display: block" %>
+    <%= form.select :semester, @semesters, prompt: 'Select a semester' %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
+</div>
+
+<br>
+
+<div class="d-flex justify-content-center">
+  <%= link_to "Back to user plan courses", user_plan_path %>
+</div>
