--- a/app/views/users/create_profile.html.erb
+++ b/app/views/users/create_profile.html.erb
@@ -1,5 +1,6 @@
 <h1 class="heading">Create Your Profile</h1>
 
+<div class="d-flex justify-content-center">
 <%= form_for @user, url: update_profile_user_path(@user), method: :patch do |f| %>
   <div class="field">
     <%= f.label :name, "Name" %><br>
@@ -25,7 +26,7 @@
     <%= f.label :graduation_semester, "Graduation Semester" %><br>
     <%= f.select :graduation_semester, ["Fall", "Spring"], { include_blank: 'Select Semester' }, { required: true } %>
   </div>
-  <div class="field">
+  <div class="field mb-2">
     <%= f.label :graduation_year, "Graduation Year" %><br>
     <%= f.select :graduation_year, ((Time.now.year)..(Time.now.year + 5)).to_a, { include_blank: 'Select Year' }, { required: true } %>
   </div>
@@ -33,3 +34,4 @@
     <%= f.submit "Create Profile" %>
   </div>
 <% end %>
+</div>
