--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -6,11 +6,14 @@
         <p> <%= link_to "Subjects", subjects_path %> </p>
         <p> <%= link_to "Requirements", requirements_path %> </p>
         <p> <%= link_to "Requirement Courses", requirement_courses_path %> </p>
-            <% if user_signed_in? %>
-                <p> <%= link_to 'User Profile', user_profile_path %> </p>
-                <p> <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %> </p>
-            <% else %>
-                <p> <%= link_to "Sign In", new_user_session_path %> </p>
+        <% if user_signed_in? %>
+            <% if current_user&.isAdmin %>
+                <p> <%= link_to "Manage Users", admin_users_path, class: "btn btn-primary" %> </p>
             <% end %>
-            </div>
+            <p> <%= link_to 'User Profile', user_profile_path %> </p>
+            <p> <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %> </p>
+        <% else %>
+            <p> <%= link_to "Sign In", new_user_session_path %> </p>
+        <% end %>
+        </div>
 </div>
